<resources>
    <!-- To personnalize (all communities)-->
    <string name="app_name">Super Moi - Communauté</string>
    <string name="welcome_title_with">"Paroisse Saint-Sébastien"</string>
    <string name="welcome_introduction">"Petit texte personnalisé présentant la communauté&#8230; 150 caractères environ ce n'est pas mal si vous voulez qu'il soit lu et que ça rentre dans la case!"</string>

    <!-- To adapt if you want to adapt super powers // change strings:  create_SP_? / event_theme[?] and drawables: ic_topic_? -->
    <string name="create_SP_0">"Faire du repassage"</string>
    <string name="create_SP_1">"Faire le ménage"</string>
    <string name="create_SP_2">"Faire les courses"</string>
    <string name="create_SP_3">"Faire la cuisine"</string>
    <string name="create_SP_4">"Faire des conduites"</string>
    <string name="create_SP_5">"Entretenir le jardin"</string>
    <string name="create_SP_6">"Faire des bricolages"</string>
    <string name="create_SP_7">"Faire des travaux"</string>
    <string name="create_SP_8">"Aider à déménager"</string>
    <string name="create_SP_9">"Faire la lecture"</string>
    <string name="create_SP_10">"Garder des enfants"</string>
    <string name="create_SP_11">"Faire de la couture"</string>
    <string name="create_SP_12">"Faire des bouquets"</string>
    <string name="create_SP_13">"Aider à faire ses devoirs"</string>
    <string name="create_SP_14">"Tenir compagnie"</string>
    <string name="create_SP_15">"Faire des démarches admin."</string>

    <string-array name="event_theme">
        <item>"Faire du repassage"</item>
        <item>"Faire le ménage"</item>
        <item>"Faire les courses"</item>
        <item>"Faire la cuisine"</item>
        <item>"Faire des conduites"</item>
        <item>"Entretenir le jardin"</item>
        <item>"Faire des bricolages"</item>
        <item>"Faire des travaux"</item>
        <item>"Aider à déménager"</item>
        <item>"Faire la lecture"</item>
        <item>"Garder des enfants"</item>
        <item>"Faire de la couture"</item>
        <item>"Faire des bouquets</item>
        <item>"Aider à faire ses devoirs"</item>
        <item>"Tenir compagnie"</item>
        <item>"Faire des démarches admin."</item>
    </string-array>

    <!-- ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
    <!-- not to change -->
    <!-- ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->

       <!-- Welcome -->
    <string name="app_title">Super Moi</string>
    <string name="main_activity_description">"L'appli qui révèle vos super-pouvoirs!"</string>
    <string name="connexion">"J'ai déjà un compte"</string>
    <string name="new_user">"Je voudrais créer un compte"</string>
    <string name="error_unknown_error">"Une erreur inconnue s'est produite&#8230;"</string>
    <string name="error_no_internet">"Pas de connexion internet"</string>
    <string name="error_authentication_canceled">"Authentificaiton annulée"</string>
    <string name="error_you_need_invitation">"Il faut une invitation pour pouvoir créer un compte et utiliser Super Moi"</string>

    <!-- Charte activity -->
    <string name="charte1_title">"A tous, on peut tout!</string>
    <string name="charte2_title">"Nous avons tous des super pouvoirs"</string>
    <string name="charte2_text">"Super Moi fonctionne sur le principe de la réciprocité. Vous pouvez demander de l'aide autant que vous voulez, à condition d'être prêt à rendre service aussi!!!"</string>
    <string name="charte3_title">"Un super héros ne fait jamais défaut"</string>
    <string name="charte3_text">"N'oubliez pas d'aller effectivement rendre le service pour lequel vous vous êtes engagé ou de prévenir le plus tôt possible si vous avez un empêchement.</string>

    <!-- Drawer Menu -->
    <string name="drawer_profil_title">"Moi, bon et fort"</string>
    <string name="drawer_profil_description">"Ma fiche descriptive"</string>
    <string name="drawer_innedhelp_events">"J'ai demandé de l'aide"</string>
    <string name="drawer_iamhero_events">"J'ai proposé mon aide"</string>
    <string name="drawer_sponsorship">"Et les autres aussi!"</string>
    <string name="drawer_users">"Annuaire des super héros"</string>
    <string name="drawer_sponsorship_invitation">"Inviter à rejoindre Super Moi"</string>
    <string name="drawer_quit">"Supprimer mon compte"</string>
    <string name="navigation_drawer_open">"Ouvrir le menu"</string>
    <string name="navigation_drawer_close">"Fermer le menu"</string>

    <!-- CreateUser -->
    <string name="create_name">"Nom"</string>
    <string name="create_email">"Email"</string>
    <string name="create_phone">"0606060606"</string>
    <string name="create_phone_intro">"Mon numéro de téléphone: "</string>
    <string name="create_phone_expl">"Il ne sera visible que par la personne que vous aurez proposé d'aider."</string>
    <string name="create_description_title">"Qui suis-je?"</string>
    <string name="create_description_hint">"Je raconte en quelques mots qui je suis."</string>
    <string name="create_validate">"C'est parti!</string>
    <string name="info_no_email_found">"Aucune adresse email"</string>
    <string name="info_no_username_found">"Aucun nom d'utilisateur"</string>
    <string name="create_community">"J'habite à "</string>
    <string name="phone_or_town_missing">"Il faut entrer un numéro de téléphone, une ville et une petite description."</string>
    <string name="SP_missing">"Il faut révéler au moins un super pouvoir."</string>
    <string name="create_SP">"Mes super pouvoirs"</string>

    <!-- HeroDetail -->
    <string name="hero_phone_intro">"Téléphone: "</string>
    <string name="hero_description_title">"Qui est-il?"</string>
    <string name="hero_SP">"Ses super pouvoirs"</string>
    <string name="hero_community">"Habite à "</string>
    <string name="hero_ref_intro">"Ce héros s'est déjà engagé auprès de: "</string>
    <string name="hero_no_ref">"Pas encore d'engagement à son actif, mais ça va venir!!!"</string>
    <string name="send_email">"Quelle messagerie voulez-vous utiliser?"</string>
    <string name="permission_needed">"Nous n'avons pas la permission"</string>
    <string name="tel_missing">"Nous n'avons pas le numéro."</string>

    <!-- CREATE EVENT -->
    <string name="create_event">"Créer une fiche mission"</string>
    <string name="event_theme_title">"C'est une mission de type&#8230;"</string>
    <string name="event_description_title">"En quelques lignes, votre mission sera: "</string>
    <string name="event_description">"Je décris en quelques lignes en quoi j'ai besoin d'aide et dans quelles conditions la mission pourra se dérouler."</string>
    <string name="event_town_title">"Lieu où se déroulera la mission: "</string>
    <string name="event_town_expl">"Notez le nom de la ville ou \"à domicile\" si la mission peut se faire chez le héros lui-même"</string>
    <string name="event_town">"Nom de la ville ou du village"</string>
    <string name="event_date">"Date de la mission"</string>
    <string name="event_numberHero">"Nombre de héros nécessaires"</string>
    <string name="event_car">"Je peux assurer le transport."</string>
    <string name="event_validate">"Enregistrer"</string>
    <string name="event_reset">"Annuler"</string>
    <string name="event_info_missing">"Il faut remplir tous les champs."</string>

    <!-- CARD EVENT -->
    <string name="SOS_CV_intro">"Pour: "</string>
    <string name="SOS_CV_town">"à: "</string>

    <!-- MAIN ACTIVITY -->
    <string name="show_all_events">"Toutes les missions"</string>
    <string name="show_map">"Carte"</string>
    <string name="my_events">"Mes missions"</string>
    <string name="delete_account_message">"Vous allez supprimer vote compte. Attention! Cette action est irréversible."</string>
    <string name="delete_account_validation">"J'ai compris!"</string>
    <string name="delete_account_reset">"Non! Annuler"</string>
    <string name="deleted_account">"Compte supprimé"</string>

    <!-- DETAIL EVENT ACTIVITY -->
    <string name="detail_event_title">"Votre mission si vous l'acceptez&#8230;"</string>
    <string name="detail_event_title2">"Vous volerez au secours de: "</string>
    <string name="detail_event_validate">"Go! J'accomplis cette mission."</string>
    <string name="detail_event_number_heros_already">"Héros déjà volontaires: "</string>
    <string name="detail_event_number_heros_not_found">"Nombre de héros encore à trouver: "</string>
    <string name="detail_event_number_heros_total_to_find">"Nombre de héros total"</string>
    <string name="detail_event_car_yes">"Si besoin, le transport est assuré."</string>
    <string name="detail_event_car_no">"Le transport ne peut pas être assuré."</string>
    <string name="detail_event_date_created_intro">"Mise à jour de la fiche: "</string>
    <string name="detail_event_confirmation_title">"Confirmation"</string>
    <string name="detail_event_hero_confirmation">"Vous confirmez que vous proposez d'assurer cette mission?"</string>

    <!-- NOTIFICATION -->
    <string name="notification_hero_title">"Des héros volent à votre secours"</string>
    <string name="notification_event_title">"Nouvelles fraîches!"</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="dont_forget">"N'oubliez pas! Vous vous êtes proposé comme Super Héros pour une mission demain!"</string>
    <string name="new_event_for_you">"Une nouvelle mission nécessitant vos super pouvoirs a été mise en ligne récemment."</string>

    <!-- USER EVENTS ACTIVITY -->
    <string name="iamhero_title">"Je me suis engagé(e) à voler au secours de "</string>
    <string name="ineedhelp_title">"J'ai demandé de l'aide pour "</string>

    <!-- UPDATE EVENT -->
    <string name="update_expl_text">"Vous pouvez modifier la description de l'événement, le nombre de héros cherchés et supprimer un héros qui s'était proposé. Les autres modifications changent trop les caractéristiques de la mission. Pour les changer vous devrez donc supprimer cette mission et en recréer une autre... et chercher de nouveaux héros"</string>
    <string name="update_hero_delete_text">"Vous allez supprimer ce héros de la liste."</string>
    <string name="update_hero_delete_title">"Attention!"</string>

    <!-- INVITE ACTIVITY-->
    <string name="invite_text">"Vous connaissez quelqu'un qui aimerait rejoindre Super Moi et en qui vous avez toute confiance? Vous souhaitez proposer à quelqu'un de rejoindre Super Moi? Le pouvoir est entre vos mains!!!"</string>
    <string name="invite_text2">"N'oubliez pas que Super Moi est une application de proximité qui cherche à mettre en lien des gens appartenant à la même communauté. N'invitez que des personnes correspondant à cette description.</string>
    <string name="invite_text3"> "Il vous suffit de cliquer sur le bouton. Votre invité recevra un lien qui lui permettra de créer son compte sur Super Moi et de révéler ses Supers Pouvoirs!!!"</string>
    <string name="invite_btn">"Lancer l'invitation</string>
</resources>
