<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_drawer">

    <item android:title="@string/drawer_profil_title">
        <menu>
            <item
                android:id="@+id/drawer_profil"
                android:icon="@drawable/ic_account_circle"
                android:title="@string/drawer_profil_description" />
            <item
                android:id="@+id/drawer_myevents"
                android:icon="@drawable/ic_needhelp"
                android:title="@string/drawer_innedhelp_events" />
            <item
                android:id="@+id/drawer_quit"
                android:icon="@drawable/ic_quit"
                android:title="@string/drawer_quit" />
        </menu>
    </item>

    <item android:title="@string/drawer_sponsorship">
        <menu>
            <item
                android:id="@+id/drawer_allusers"
                android:icon="@drawable/ic_users"
                android:title="@string/drawer_users" />
            <item
                android:id="@+id/drawer_invitation"
                android:icon="@drawable/ic_sponsorship"
                android:title="@string/drawer_sponsorship_invitation" />
        </menu>
    </item>


</menu>