<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateUserActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/create_login_infos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/default_margin">

        <ImageView
            android:id="@+id/create_face"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/vignetteheros"

            android:paddingHorizontal="@dimen/default_margin"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="10dp">

            <TextView
                android:id="@+id/create_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_margin"
                android:text="@string/create_name"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <TextView
                android:id="@+id/create_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_margin"
                android:text="@string/create_email"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_user_infos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_login_infos">

        <LinearLayout
            android:id="@+id/create_infos_complete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorSecondary"
            android:orientation="vertical"
            android:padding="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingEnd="@dimen/default_margin"
                    android:text="@string/create_phone_intro"
                    android:textColor="@android:color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <EditText
                    android:id="@+id/create_tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right|end"
                    android:hint="@string/create_phone"
                    android:inputType="phone"
                    android:textColor="@android:color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingEnd="@dimen/default_margin"
                    android:text="@string/create_community"
                    android:textColor="@android:color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <EditText
                    android:id="@+id/create_town"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_town"
                    android:textColor="@android:color/white"
                    android:gravity="right|end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            </LinearLayout>

            <TextView
                android:id="@+id/create_user_description_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/create_description_title"
                android:paddingTop="@dimen/default_margin"
                />

            <EditText
                android:id="@+id/create_user_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_description_hint"
                android:textColor="@android:color/white"
                android:inputType="textMultiLine"
                android:gravity="center_horizontal"/>
        </LinearLayout>


        <TextView
            android:id="@+id/create_user_intro_SP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            android:text="@string/create_SP"
            android:textColor="@color/colorSecondary"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_infos_complete" />


        <Button
            android:id="@+id/create_user_SP_0"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/ic_topic_0"
            android:paddingTop="@dimen/default_margin"
            android:text="@string/create_SP_0"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_user_intro_SP" />

        <Button
            android:id="@+id/create_user_SP_1"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/ic_topic_1"
            android:paddingTop="@dimen/default_margin"
            android:text="@string/create_SP_1"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/create_user_SP_0"
            app:layout_constraintTop_toTopOf="@+id/create_user_SP_0"
            android:layout_marginStart="@dimen/default_margin" />

        <Button
            android:id="@+id/create_user_SP_2"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/ic_topic_2"
            android:paddingTop="@dimen/default_margin"
            android:text="@string/create_SP_2"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/create_user_SP_1"
            app:layout_constraintTop_toTopOf="@+id/create_user_SP_1"
            android:layout_marginStart="@dimen/default_margin"/>

        <Button
            android:id="@+id/create_user_SP_3"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/ic_topic_3"
            android:paddingTop="@dimen/default_margin"
            android:text="@string/create_SP_3"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/create_user_SP_2"
            app:layout_constraintTop_toTopOf="@+id/create_user_SP_2"
            android:layout_marginStart="@dimen/default_margin"/>

        <Button
            android:id="@+id/create_user_SP_4"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/ic_topic_4"
            android:paddingTop="@dimen/default_margin"
            android:text="@string/create_SP_4"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@+id/create_user_SP_0"
            app:layout_constraintTop_toBottomOf="@+id/create_user_SP_0"
            android:layout_marginTop="@dimen/default_margin"/>

        <Button
            android:id="@+id/create_user_SP_5"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/ic_topic_5"
            android:paddingTop="@dimen/default_margin"
            android:text="@string/create_SP_5"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/create_user_SP_4"
            app:layout_constraintTop_toTopOf="@+id/create_user_SP_4"
            android:layout_marginStart="@dimen/default_margin"/>

        <Button
            android:id="@+id/create_user_SP_6"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/ic_topic_6"
            android:paddingTop="@dimen/default_margin"
            android:text="@string/create_SP_6"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/create_user_SP_5"
            app:layout_constraintTop_toTopOf="@+id/create_user_SP_5"
            android:layout_marginStart="@dimen/default_margin"/>

        <Button
            android:id="@+id/create_user_SP_7"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/ic_topic_7"
            android:paddingTop="@dimen/default_margin"
            android:text="@string/create_SP_7"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/create_user_SP_6"
            app:layout_constraintTop_toTopOf="@+id/create_user_SP_6"
            android:layout_marginStart="@dimen/default_margin"/>

        <Button
            android:id="@+id/create_user_SP_8"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/ic_topic_8"
            android:paddingTop="@dimen/default_margin"
            android:text="@string/create_SP_8"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@+id/create_user_SP_4"
            app:layout_constraintTop_toBottomOf="@+id/create_user_SP_4"
            android:layout_marginTop="@dimen/default_margin"/>

        <Button
            android:id="@+id/create_user_SP_9"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/ic_topic_9"
            android:paddingTop="@dimen/default_margin"
            android:text="@string/create_SP_9"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/create_user_SP_8"
            app:layout_constraintTop_toTopOf="@+id/create_user_SP_8"
            android:layout_marginStart="@dimen/default_margin"/>

        <Button
            android:id="@+id/create_user_SP_10"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/ic_topic_10"
            android:paddingTop="@dimen/default_margin"
            android:text="@string/create_SP_10"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/create_user_SP_9"
            app:layout_constraintTop_toTopOf="@+id/create_user_SP_9"
            android:layout_marginStart="@dimen/default_margin"/>

        <Button
            android:id="@+id/create_user_SP_11"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/ic_topic_11"
            android:paddingTop="@dimen/default_margin"
            android:text="@string/create_SP_11"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/create_user_SP_10"
            app:layout_constraintTop_toTopOf="@+id/create_user_SP_10"
            android:layout_marginStart="@dimen/default_margin"/>

        <Button
            android:id="@+id/create_user_SP_12"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/ic_topic_12"
            android:paddingTop="@dimen/default_margin"
            android:text="@string/create_SP_12"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@+id/create_user_SP_8"
            app:layout_constraintTop_toBottomOf="@+id/create_user_SP_8"
            android:layout_marginTop="@dimen/default_margin"/>

        <Button
            android:id="@+id/create_user_SP_13"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/ic_topic_13"
            android:paddingTop="@dimen/default_margin"
            android:text="@string/create_SP_13"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/create_user_SP_12"
            app:layout_constraintTop_toTopOf="@+id/create_user_SP_12"
            android:layout_marginStart="@dimen/default_margin"/>

        <Button
            android:id="@+id/create_user_SP_14"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/ic_topic_14"
            android:paddingTop="@dimen/default_margin"
            android:text="@string/create_SP_14"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/create_user_SP_13"
            app:layout_constraintTop_toTopOf="@+id/create_user_SP_13"
            android:layout_marginStart="@dimen/default_margin"/>

        <Button
            android:id="@+id/create_user_SP_15"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/ic_topic_15"
            android:paddingTop="@dimen/default_margin"
            android:text="@string/create_SP_15"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/create_user_SP_14"
            app:layout_constraintTop_toTopOf="@+id/create_user_SP_14"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/create_intro_img"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:src="@drawable/heros3long"
        app:layout_constraintTop_toBottomOf="@+id/create_user_infos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/default_margin"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>