<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="@color/colorSecondary"
android:gravity="bottom"
android:orientation="vertical"
android:padding="20dp"
android:theme="@style/ThemeOverlay.AppCompat.Dark"
    >

<TextView
    android:id="@+id/header_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textSize="30sp"
    android:textColor="@android:color/white"
    android:textStyle="bold"
    app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
        android:id="@+id/header_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title_with"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/header_title"
        app:layout_constraintStart_toStartOf="@+id/header_title"/>

    <ImageView
        android:id="@+id/header_photo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@mipmap/ic_launcher_round"
        app:layout_constraintTop_toBottomOf="@+id/header_subtitle"
        app:layout_constraintStart_toStartOf="@+id/header_subtitle"
        android:layout_marginTop="16dp"
        />

        <TextView
            android:id="@+id/header_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_name"
            android:textColor="@android:color/white"
            android:layout_marginStart="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toTopOf="@+id/header_photo"
            app:layout_constraintBottom_toBottomOf="@+id/header_photo"
            app:layout_constraintStart_toEndOf="@+id/header_photo"/>

</androidx.constraintlayout.widget.ConstraintLayout>
